force-app/main/default/objects/Agency_Portal_Fields_Mapping__c/Agency_Portal_Fields_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Agency Portal Fields Mapping to sync records</description>
    <label>Agency Portal Fields Mapping</label>
</CustomObject>