force-app/main/default/objects/Agency_Portal_Fields_Mapping__c/fields/Field_API__c.field-meta.xml
<CustomField>
    <fullName>Field_API__c</fullName>
    <description>Field API</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Field API</inlineHelpText>
    <label>Field API</label>
    <length>100</length>
    <type>Text</type>
</CustomField>