force-app/main/default/objects/Agency_Portal_Fields_Mapping__c/fields/Field_JSON_Tag__c.field-meta.xml
<CustomField>
    <fullName>Field_JSON_Tag__c</fullName>
    <description>Field JSON Tag</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Field JSON Tag</inlineHelpText>
    <label>Field JSON Tag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>