force-app/main/default/objects/Agency_Portal_Fields_Mapping__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <description>Field Type</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Field Type</inlineHelpText>
    <label>Field Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>