force-app/main/default/objects/Agency_Portal_Fields_Mapping__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Object Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Object Name</inlineHelpText>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>