force-app/main/default/objects/Agency_Portal_Fields_Mapping__c/listViews/Settlement_Fields.listView-meta.xml
<ListView>
    <fullName>Settlement_Fields</fullName>
    <columns>NAME</columns>
    <columns>Field_API__c</columns>
    <columns>Field_JSON_Tag__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Object_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Name__c</field>
        <operation>equals</operation>
        <value>Settlement</value>
    </filters>
    <label>Settlement Fields</label>
</ListView>